--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDTetPmohnWdWT0lsYV9iT-58Z5Gm4jmgA"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDTetPmohnWdWT0lsYV9iT-58Z5Gm4jmgA"></script> -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
